--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -1,14 +1,10 @@
 # Build Consul Server Container
-ARG IMAGE_USER=geoffh1977
-ARG IMAGE_NAME=alpine
-ARG IMAGE_VERSION=latest
-
-FROM ${IMAGE_USER}/${IMAGE_NAME}:${IMAGE_VERSION}
-LABEL maintainer="geoffh1977 <geoffh1977@gmail.com>"
+FROM {{ dockerUser + "/" + buildImageName + ":" + buildImageVersion }}
+LABEL maintainer="{{ dockerUser }} <{{ dockerUserEmail }}>"
 USER root
 
-ARG OPENJDK_VERSION
-ENV JAVA_HOME=/usr/lib/jvm/default-jvm/jre
+ARG OPENJDK_VERSION={{ finalImageVersion }} \
+    JAVA_HOME=/usr/lib/jvm/default-jvm/jre
 
 # Install OpenJDK
 # hadolint ignore=SC2046,DL3018,DL4006
